apps/portal/kustomize/portal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal
  namespace: default
  labels:
    app.kubernetes.io/name: portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: portal
  template:
    metadata:
      labels:
        app.kubernetes.io/name: portal
    spec:
      containers:
      - name: portal
        image: k8s.gcr.io/e2e-test-images/echoserver:2.5
        ports:
        - containerPort: 8080
