apps/portal/kustomize/portal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal
  namespace: default
  labels:
    app.kubernetes.io/name: portal
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: portal
