apps/portal/kustomize/portal-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portal
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    ## Portal route
    - match: Host(`tcismanager.rd0.hwacom.com`) && Path(`/`)
      kind: Rule
      services:
        - name: portal
          port: 80
      middlewares:
        - name: redirect
    - match: Host(`tcismanager.rd0.hwacom.com`) && PathPrefix(`/portal/`)
      kind: Rule
      services:
        - name: portal
          port: 80
  tls:
    secretName: portal-tls-secret
